se agrego propiedad a section en html

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -29,7 +29,7 @@
      </h1>
     
     
-        <section class="d-flex justify-content-around mt-5px">
+        <section class="d-flex justify-content-around mt-5px flex-wrap">
 
             <div class="card" style="width: 18rem;">
                 <img src="../imagenes/martillo.jfif" class="card-img-top" alt="martillo">
