se corrigio media query

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      
     <header>
-        <img src="imagenes/logo.jpg " width="75px">
+        <img src="./imagenes/logo.jpg"width="75px" alt=" logo">
         
          <nav>
             <ul>
