--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,11 +13,11 @@
          <nav>
             <ul>
 
-                <li><a href="index.html">inicio</a></li>
-                <li><a href="html/quienes somos.html">quienes somos</a></li>
-                <li><a href="html/servicios.html">servicios</a></li>
-                <li><a href="html/publicaciones.html">publicaciones</a></li>
-                <li><a href="html/contacto.html">contacto</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="../html/quienessomos.html">quienes somos</a></li>
+                <li><a href="../html/servicios.html">servicios</a></li>
+                <li><a href="../html/publicaciones.html">publicaciones</a></li>
+                <li><a href="../html/contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
