--- a/html/publicaciones.html
+++ b/html/publicaciones.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
          <li><a href="../index.html">inicio</a></li>
-         <li><a href="quienes somos.html">quienes somos</a>
-         <li><a href="servicios.html">servicios</a></li>
+         <li><a href="../quienes somos.html">quienes somos</a>
+         <li><a href="../servicios.html">servicios</a></li>
          <li><a href="../html/publicaciones.html"> publicaciones</a></li>
          <li><a href="../html/contacto.html"> contacto</a></li>
             </ul>
