--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -14,11 +14,11 @@
         <img src="../imagenes/logo.jpg " width="75px">
         <nav>
             <ul>
-         <li><a href="../index.html">inicio</a></li>
-         <li><a href="quienes somos.html">quienes somos</a>
-         <li><a href="servicios.html">servicios</a></li>
-         <li><a href="../html/publicaciones.html"> publicaciones</a></li>
-         <li><a href="../html/contacto.html"> contacto</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="../html/quienessomos.html">quienes somos</a></li>
+                <li><a href="../html/servicios.html">servicios</a></li>
+                <li><a href="../html/publicaciones.html">publicaciones</a></li>
+                <li><a href="../html/contacto.html">contacto</a></li>
             </ul>
          
          </nav>
