--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul>
 
                 <li><a href="index.html">inicio</a></li>
-                <li><a href="html/quienes somos.html">quienes somos</a></li>
-                <li><a href="html/servicios.html">servicios</a></li>
-                <li><a href="html/publicaciones.html">publicaciones</a></li>
-                <li><a href="html/contacto.html">contacto</a></li>
+                <li><a href="../html/quienes somos.html">quienes somos</a></li>
+                <li><a href="../html/servicios.html">servicios</a></li>
+                <li><a href="../html/publicaciones.html">publicaciones</a></li>
+                <li><a href="../html/contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
