--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -15,10 +15,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">inicio</a></li>
-                <li><a href="./quienessomos.html">quienes somos</a></li>
-                <li><a href="./servicios.html">servicios</a></li>
-                <li><a href="./publicaciones.html">publicaciones</a></li>
-                <li><a href="./contacto.html">contacto</a></li>
+                <li><a href="../quienessomos.html">quienes somos</a></li>
+                <li><a href="../servicios.html">servicios</a></li>
+                <li><a href="../publicaciones.html">publicaciones</a></li>
+                <li><a href="../contacto.html">contacto</a></li>
             </ul>
          
          </nav>
