--- a/html/servicios.html
+++ b/html/servicios.html
@@ -6,18 +6,18 @@
     <title>Arrieta & asociados/servicios>
     <servicios></servicios></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.servicios.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
-<body>
+<body> 
     
     <header>
         <img src="../imagenes/logo.jpg " width="75px">
         <nav>
             <ul>
               <li><a href="../index.html">inicio</a></li>
-              <li><a href="../quienes somos.html">quienes somos</a>
-              <li><a href="../servicios.html">servicios</a></li>
+              <li><a href="../html/quienessomos.html somos.html">quienes somos</a>
+              <li><a href="../html/servicios.html">servicios</a></li>
               <li><a href="../html/publicaciones.html"> publicaciones</a></li>
               <li><a href="../html/contacto.html"> contacto</a></li>
             </ul>
