se modifica index y arquitectura carpeta sass

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -70,15 +70,14 @@
         <h3>
             Seginos
         </h3>
-
-
          <img src="../imagenes/ig.png"width="85" alt="logo-ig">
-        <a href="#">@arrietayasociados.legales</a>
+
+        <li><a href="#" class="red-1">@arrietayasociados.legales</a></li>
+        <li> <a href="#" class="red-2">fcarrieta.asociadoslegales</a></li>
 
          <img src="../imagenes/descarga (1).png" width="85"alt="logo fc" >
-        <a href="#">fcarrieta.asociadoslegales</a>
 
-        <a href="https://web.whatsapp.com/"><img src="../imagenes/whatsapp.png" alt="icono"></a>
+        <a href="https://web.whatsapp.com/" class="red-3"><img src="../imagenes/whatsapp.png" alt="icono"></a>
 
       
        </div> 
