--- a/html/servicios.html
+++ b/html/servicios.html
@@ -24,7 +24,8 @@
          
          </nav>
     </header>
-     <h1>
+
+     <h1 class="encabezado">
         Nuetras Areas de Servicios
      </h1>
     
@@ -32,6 +33,7 @@
         <section class="d-flex justify-content-around mt-5px flex-wrap">
 
             <div class="card" style="width: 18rem;">
+
                 <img src="../imagenes/martillo.jfif" class="card-img-top" alt="martillo">
                 <div class="card-body">
                   <h4 class="card-title">Arbitrajes & Mediaciones. Litigios Civiles y comerciales</h4>
